# technical_test

./: .dockerignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
apps/customer/: models.py  serializers.py  urls.py  views.py
apps/customer/migrations/: 0001_initial.py  0002_auto_20240517_1925.py  0003_alter_customer_id.py
apps/loan/: models.py  serializers.py  urls.py  views.py
apps/loan/migrations/: 0001_initial.py  0002_alter_loan_contract_version.py  0003_auto_20240517_1925.py  0004_alter_loan_id.py
apps/payment/: admin.py  models.py  serializers.py  urls.py  views.py
apps/payment/migrations/: 0001_initial.py  0002_rename_paymetdetail_paymentdetail.py  0003_auto_20240517_1925.py  0004_alter_payment_id_alter_paymentdetail_id_and_more.py
core/: settings.py  urls.py
tests/: conftest.py
tests/api/: test_customer.py  test_loan.py  test_payment.py
tests/fixtures/: api_key_fixtures.py
utils/: mixins.py
