[tool.poetry]
name = "technical-test"
version = "0.1.0"
description = ""
authors = ["joaquin Huaman Pino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
django = "4.2"
coreapi = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.0"
pylint-django = "^2.5.5"
black = "^24.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
